fixed bug on routing. Always use Api 1st on routing so that it will not cause conflict

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       </ul>
       <ul *ngIf="authService.loggedIn()" class="navbar-nav ml-auto">
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-          <a class="nav-link" href="#" routerLink="/blog">Blog</a>
+          <a class="nav-link" href="#" routerLink="/blogs">Blog</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" href="#" routerLink="/profile">Profile</a>
